--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>KIT FRAN CHILLICAKE KIT BY FRANCINY EHLKE</h1>
-    <p>Celebre com estilo os 4 anos da Fran By FR! Apresentamos a edição especial com quatro campeões: CHILLI23, PINKCHILLI, CHOCOCHILLI e GREENCHILLI. Cada um deles vem no ChilliCake, um bolinho recheado com os quatro chillis, pronto para brilhar!
-
-        E tem surpresa: dentro do ChilliCake, um presente especial para pendurar onde quiser. Mas atenção, essa fornada é LIMITADA! Não perca a chance de arrasar!
-        
-        Peso líquido: 3,3g cada gloss.</p>
+    <div class="container">
+        <div class="texto">
+            <h1>FRAN BY FRANCINY EHLKE Gloss Aumento Volume Lábios Lipchilli</h1>
+            <p>
+                O Gloss Lipchilli da Fran By Franciny Ehlke tem acabamento brilhoso e textura em gel avermelhado. Seu pincel em formato de flecha facilita a aplicação e libera a quantidade ideal de produto. A fórmula contém ácido hialurônico, vitamina E, manteiga de karité e D-pantenol, que mantêm a hidratação, suavizam lábios ressecados e protegem contra a oxidação.
+Além disso, é um produto vegano, sem glúten, sem parabenos, sem fragrância e não testado em animais.
+        </div>
     </div>
-    <div class="imagem">
-        <img src="Home.jpg" style="float: right;">
-    </div>
-</div>
 </body>
 </html>
